@@ -142,6 +142,13 @@ typedef enum
 
 typedef enum
 {
+  META_ACTION_DOUBLE_CLICK_TITLEBAR_TOGGLE_SHADE,
+  META_ACTION_DOUBLE_CLICK_TITLEBAR_TOGGLE_MAXIMIZE,
+  META_ACTION_DOUBLE_CLICK_TITLEBAR_LAST
+} MetaActionDoubleClickTitlebar;
+
+typedef enum
+{
   META_FRAME_TYPE_NORMAL,
   META_FRAME_TYPE_DIALOG,
   META_FRAME_TYPE_MODAL_DIALOG,
