@@ -77,6 +77,8 @@ void meta_core_get_size     (Display *xdisplay,
 
 void meta_core_minimize         (Display *xdisplay,
                                  Window   frame_xwindow);
+void meta_core_toggle_maximize  (Display *xdisplay,
+                                 Window   frame_xwindow);
 void meta_core_unmaximize       (Display *xdisplay,
                                  Window   frame_xwindow);
 void meta_core_maximize         (Display *xdisplay,
